--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-harddisk-plugin": "1.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-webpack-plugin": "^3.0.0",
     "jasmine-reporters": "^2.3.2",
     "jest": "^24.8.0",
     "jest-enzyme": "^7.0.2",
