--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-mentions",
-  "version": "0.0.0-development",
+  "name": "fork-react-mentions",
+  "version": "4.1.1",
   "description": "React mentions input",
   "main": "dist/react-mentions.cjs.js",
   "module": "dist/react-mentions.esm.js",
