--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fork-react-mentions",
-  "version": "4.1.1",
+  "version": "4.1.1-2",
   "description": "React mentions input",
   "main": "dist/react-mentions.cjs.js",
   "module": "dist/react-mentions.esm.js",
